# mindgoblin

./: .gitignore  CHANGELOG.md  DESIGN.md  INSTALL.md  Makefile  README.md  ZETTLE.md  cabal.project.local  debug_test.txt  flake.nix  mg.cabal  test_24h.txt  test_dates.txt  test_invalid.txt  test_precise.txt  test_regression.txt  test_todo.txt  test_unicode.txt
app/: Main.hs
docs/: TEST_SPEC.md
src/: MindGoblin.hs
src/MindGoblin/: FileOps.hs  Parser.hs  Sync.hs  Types.hs  VDir.hs  VDirSyncer.hs  VTodo.hs  Zettel.hs
test/: CLISpec.hs  ChaosSpec.hs  EdgeCaseSpec.hs  FileOpsSpec.hs  IntegrationSpec.hs  ParserSpec.hs  PropertySpec.hs  RegressionSpec.hs  TypesSpec.hs  VDirSyncerSpec.hs  VTodoSpec.hs  ZettelSpec.hs
